tests/ui/consts/const-err-late.stderr
error[E0080]: evaluation of `S::<i32>::FOO` failed
  --> $DIR/const-err-late.rs:13:21
   |
LL |     const FOO: u8 = [5u8][1];
   |                     ^^^^^^^^ index out of bounds: the length is 1 but the index is 1

note: erroneous constant used
  --> $DIR/const-err-late.rs:19:16
   |
LL |     black_box((S::<i32>::FOO, S::<u32>::FOO));
   |                ^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/const-err-late.rs:19:16
   |
LL |     black_box((S::<i32>::FOO, S::<u32>::FOO));
   |                ^^^^^^^^^^^^^

error[E0080]: evaluation of `S::<u32>::FOO` failed
  --> $DIR/const-err-late.rs:13:21
   |
LL |     const FOO: u8 = [5u8][1];
   |                     ^^^^^^^^ index out of bounds: the length is 1 but the index is 1

note: erroneous constant used
  --> $DIR/const-err-late.rs:19:31
   |
LL |     black_box((S::<i32>::FOO, S::<u32>::FOO));
   |                               ^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/const-err-late.rs:19:16
   |
LL |     black_box((S::<i32>::FOO, S::<u32>::FOO));
   |                ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
